# oapigen-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  makefile
crates/oapigen/: Cargo.toml
crates/oapigen/fixtures/: one_route_constant.yaml  one_route_date.yaml  one_route_date_nullable.yaml  one_route_int.yaml  one_route_nullable.yaml  train.yaml
crates/oapigen/fixtures/typespec/src/one_route_one_object/: tspconfig.yaml
crates/oapigen/src/: lib.rs  main.rs
crates/oapigen/src/config/fixtures/: config.toml
crates/oapigen/src/format/: booleans.rs  mod.rs  nullable.rs  numbers.rs  strings.rs
crates/oapigen/src/generating/: errors.rs  files.rs  merges.rs  mod.rs  strings.rs
crates/oapigen/src/generating/snapshots/: oapigen__generating__merges__tests__merge_imports.snap  oapigen__generating__merges__tests__merge_schema.snap
crates/oapigen/src/models/: config.rs  intermediate_representation.rs  mod.rs  schema.rs
crates/oapigen/src/models/config/: config.rs  macros.rs
crates/oapigen/src/models/snapshots/: oapigen__models__schema__tests__parsed_schema_display.snap  oapigen_rs__models__schema__tests__parsed_schema_display.snap
crates/oapigen/src/parsing/: constants.rs  errors.rs  fixtures.rs  macros.rs  mod.rs  routes.rs  schema_format.rs  schemas.rs  specs.rs  structs.rs  typeset.rs
crates/oapigen/src/parsing/snapshots/: oapigen__parsing__specs__tests__parse_structs@one route int.snap  oapigen__parsing__specs__tests__parse_structs@one route int.snap.new  oapigen__parsing__typeset__tests__parse_base_cases@boolean.snap  oapigen__parsing__typeset__tests__parse_base_cases@integer.snap  oapigen__parsing__typeset__tests__parse_base_cases@integer.snap.new  oapigen__parsing__typeset__tests__parse_base_cases@number.snap  oapigen__parsing__typeset__tests__parse_base_cases@string.snap  oapigen_rs__parsing__typeset__tests__parse_base_cases@integer.snap  oapigen_rs__parsing__typeset__tests__parse_base_cases@number.snap  oapigen_rs__parsing__typeset__tests__parse_base_cases@string.snap
crates/oapigen/templates/: constant.hbs  struct.hbs
crates/oapigen/tests/: one_route_date_test.rs  one_route_int_test.rs  one_route_nullable_date_test.rs
crates/oapigen/tests/snapshots/: one_route_date_test__one_route_date_test.snap.new  one_route_date_test__one_route_date_test@chrono.snap  one_route_date_test__one_route_date_test@chrono.snap.new  one_route_date_test__one_route_date_test@jiff.snap  one_route_date_test__one_route_date_test@jiff.snap.new  one_route_int_test__one_route_int_test.snap
crates/zst_constants/: Cargo.toml  readme.md
crates/zst_constants/benches/: arrays.rs
crates/zst_constants/src/: lib.rs
crates/zst_constants/tests/: integration_tests.rs
crates/zst_constants/tests/snapshots/: integration_tests__array_constant_zst_serializes_correctly.snap  integration_tests__as_constant_with_string.snap  integration_tests__as_constant_with_struct_serialize_correctly.snap  integration_tests__bool_constant_zst_serializes_correctly.snap  integration_tests__integer_constant_zst_serializes_correctly.snap  integration_tests__none_constant_zst_serializes_correctly.snap  integration_tests__number_constant_zst_serializes_correctly.snap
fixtures/: one_route_basic_types.yaml  one_route_object.yaml
fixtures/typespec/: package-lock.json  package.json
fixtures/typespec/src/: types.tsp
fixtures/typespec/src/one_route_basic_types/: main.tsp  tspconfig.yaml
fixtures/typespec/src/one_route_int/: main.tsp  tspconfig.yaml
fixtures/typespec/src/one_route_one_object/: main.tsp
src/: main.rs
src/models/: structs.rs
src/models/snapshots/: oapigen_rs__models__structs__tests__parsed_schema_display.snap
src/parsing/: format.rs  mod.rs  schema_format.rs  structs.rs  typeset.rs
src/templates/: init.rs  mod.rs  structs.rs
src/templates/snapshots/: oapigen__templates__structs__tests__struct_is_rendered_correctly.snap  oapigen_rs__templates__structs__tests__struct_is_rendered_correctly.snap
templates/: struct.hbs
typespec/: package-lock.json
typespec/src/one_route_constant/: main.tsp  tspconfig.yaml
typespec/src/one_route_date/: main.tsp  tspconfig.yaml
typespec/src/one_route_int/: main.tsp  tspconfig.yaml
typespec/src/one_route_nullable/: main.tsp  tspconfig.yaml
typespec/src/one_route_nullable/crates/oapigen/fixtures/: one_route_nullable.yaml
typespec/src/one_route_one_object/: tspconfig.yaml
