[package]
resolver = "3"
name = "oapigen-rs"
description = "foo"
version = "0.0.1"
edition = "2024"
categories = ["data-structures", "parsing"]
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/dfioravanti/oapi-gen"

[dependencies]
serde_json = "1"
serde_yaml = "0.9.34-deprecated"
tokio = "1.47.1"
oas3 = { version = "0.17.0", features = ["yaml-spec"] }
anyhow = "1.0.99"
handlebars = "6.3.2"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
quote = "1.0.40"
proc-macro2 = "1.0.101"
prettyplease = "0.2.37"
syn = "2.0.106"
log = "0.4.27"
test-case = "3.3.1"
rstest = "0.26.1"
indoc = "2"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }

[workspace.lints.rust]
rust-2018-idioms = "deny"
nonstandard-style = "deny"
future-incompatible = "deny"
missing-debug-implementations = { level = "warn", priority = -1 }

[workspace.lints.clippy]
uninlined-format-args = "warn"
disallowed-names = "warn"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
