[package]
name = "oapigen"
description = "foo"
version = "0.0.1"

categories = ["data-structures", "parsing"]
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
oas3 = { workspace = true, features = ["yaml-spec"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
log = { workspace = true }
indoc = { workspace = true }
thiserror = { workspace = true }
rstest = { workspace = true }
convert_case = { workspace = true }
clap = { workspace = true, features = ["derive"] }
jiff = "0.2.15"

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
